fix yml file
