# routes/uploadRoutes.js
@@ -33,6 +33,6 @@ router.post('/upload-rules', upload.single("file"), uploadFile);
 router.get('/get-rule-data', ruleData.getRuleData);
 //
 // new router for sales Asset
-router.get('/sale-asset-premium-calulator', fileTransform.SalesAssetPremiumCalulator);
+router.get('/sales-asset-premium-calulator', fileTransform.SalesAssetPremiumCalulator);
 //
 module.exports = router;
